# Pixel-Blaster

./: CMakeLists.txt  README.txt  color.cpp  color.h  line_drawer.cpp  line_drawer.h  main.cpp  matrix.cpp  matrix.h  matrix.txt  mesh.h  object.cpp  object.h  point.cpp  point.h  rotation.txt  screen.cpp  screen.h  triangle.cpp  triangle.h
cmake/: FindSDL2.cmake
models/: degenerate_triangle.off  mctri.off  test_triangle.off  test_triangles.off  time_cube.off
